--- a/pages/index.html
+++ b/pages/index.html
@@ -1,34 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home page</title>
-    <!-- index page css link -->
-    <link rel="stylesheet" href="../styles/index.css">
-</head>
-<body>
-    <div class="container">
-        <header>
-            <div class="header">
-                <div class="logo-img"><img height="50px" width="50px" src="../images/1656322137-byside.jpg" alt=""></div>
-                <div class="search-bar"><input type="search" placeholder="search"></div>
-            </div>
-          
-        </header>
-        <main>
-            <!-- carousel section -->
-            <section></section>
-            <!-- content section  -->
-            <section></section>
-            <!-- char js section -->
-            <section></section>
-            <!-- calender js section -->
-            <section></section>
-            <!-- map section -->
-            <section></section>
-        </main>
+    <!-- slick slider css -->
+    <link rel="stylesheet" href="../slick/slick.css" />
+    <link rel="stylesheet" href="../slick/slick-theme.css" />
+    <!-- calender link css -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
+    />
 
+    <!-- index page css link -->
+    <link rel="stylesheet" href="../styles/index.css" />
+  </head>
+  <body onload="getjio()">
+    <div class="container">
+      <header>
+        <div class="header">
+          <div class="logo-img" >
+            <img
+              height="50px"
+              width="50px"
+              src="../images/1656322137-byside.jpg"
+              alt=""
+            />
+          </div>
+          <div class="search-bar">
+            <input type="Search" placeholder="search" />
+          </div>
+        </div>
+      </header>
+      <main>
+        <!-- carousel section -->
+        <section id="slider-section" class="carousel-section">
+          <div class="slick-slider">
+            <div>
+              <img
+                src="https://images.pexels.com/photos/9638689/pexels-photo-9638689.jpeg?auto=compress&cs=tinysrgb&w=600"
+                alt=""
+              />
+            </div>
+            <div>
+              <img
+                src="https://images.pexels.com/photos/3493730/pexels-photo-3493730.jpeg?auto=compress&cs=tinysrgb&w=600"
+                alt=""
+              />
+            </div>
+            <div>
+              <img
+                src="https://images.pexels.com/photos/1321524/pexels-photo-1321524.jpeg?auto=compress&cs=tinysrgb&w=600"
+                alt=""
+              />
+            </div>
+            <div>
+              <img
+                src="https://images.pexels.com/photos/15286/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=600"
+                alt=""
+              />
+            </div>
+            <div>
+              <img
+                src="https://images.pexels.com/photos/1770809/pexels-photo-1770809.jpeg?auto=compress&cs=tinysrgb&w=600"
+                alt=""
+              />
+            </div>
+            <div>
+              <img
+                src="https://images.pexels.com/photos/1661179/pexels-photo-1661179.jpeg?auto=compress&cs=tinysrgb&w=600"
+                alt=""
+              />
+            </div>
+          </div>
+        </section>
+        <!-- content section  -->
+        <section id="content-section">
+          <div class="content-container">
+            <div class="child-content">
+              <img
+                src="https://images.pexels.com/photos/2313396/pexels-photo-2313396.jpeg?auto=compress&cs=tinysrgb&w=600"
+                alt="image"
+              />
+              <h2>Nature</h2>
+            </div>
+            <div class="child-content">
+              <img
+                src="https://images.pexels.com/photos/660266/pexels-photo-660266.jpeg?auto=compress&cs=tinysrgb&w=600"
+                alt="image"
+              />
+              <h2>Nature</h2>
+            </div>
+            <div class="child-content">
+              <img
+                src="https://images.pexels.com/photos/18355998/pexels-photo-18355998/free-photo-of-fruit-and-rushes-lying-down-in-water.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
+                alt="image"
+              />
+              <h2>Nature</h2>
+            </div>
+            <div class="child-content">
+              <img
+                src="https://images.pexels.com/photos/3220368/pexels-photo-3220368.jpeg?auto=compress&cs=tinysrgb&w=600"
+                alt="image"
+              />
+              <h2>Nature</h2>
+            </div>
+            <div class="child-content">
+              <img
+                src="https://images.pexels.com/photos/247376/pexels-photo-247376.jpeg?auto=compress&cs=tinysrgb&w=600"
+                alt="image"
+              />
+              <h2>Nature</h2>
+            </div>
+            <div class="child-content">
+              <img
+                src="https://images.pexels.com/photos/37833/rainbow-lorikeet-parrots-australia-rainbow-37833.jpeg?auto=compress&cs=tinysrgb&w=600"
+                alt="image"
+              />
+              <h2>Nature</h2>
+            </div>
+            <div class="child-content">
+              <img
+                src="https://images.pexels.com/photos/567540/pexels-photo-567540.jpeg?auto=compress&cs=tinysrgb&w=600"
+                alt="image"
+              />
+              <h2>Nature</h2>
+            </div>
+            <div class="child-content">
+              <img
+                src="https://images.pexels.com/photos/1003848/pexels-photo-1003848.jpeg?auto=compress&cs=tinysrgb&w=600"
+                alt="image"
+              />
+              <h2>Nature</h2>
+            </div>
+          </div>
+        </section>
+        <!-- char js section -->
+        <section id="chart-section">
+          <div>
+            <canvas id="myChart"></canvas>
+          </div>
+        </section>
+        <!-- calender js section -->
+        <section id="calender-section">
+          <input type="text" id="cal" placeholder="select your calender" />
+        </section>
+        <!-- map section -->
+        <section id="map-section">
+          <div id="con"></div>
+          <div class="mapouter">
+            <div class="gmap_canvas">
+              <iframe
+                width="600"
+                height="500"
+                id="gmap_canvas"
+                frameborder="0"
+                scrolling="no"
+                marginheight="0"
+                marginwidth="0"
+              ></iframe>
+            </div>
+          </div>
+        </section>
+      </main>
+      <footer>
+        <h2>This is footer and make yourself footer from red and white website</h2>
+      </footer>
     </div>
-</body>
+  </body>
+  <!-- jquery cdn -->
+  <script
+    src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+    crossorigin="anonymous"
+  ></script>
+  <!-- slick js cdn link -->
+  <script src="../slick/slick.min.js"></script>
+  <!-- chart js -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <!-- datepicker -->
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <!-- index <script></script> -->
+  <script src="../JS/index.js"></script>
+
+  <script src="../JS/map.js"></script>
+
+  <script></script>
 </html>
