--- a/pages/index.html
+++ b/pages/index.html
@@ -21,12 +21,13 @@
       <header>
         <div class="header">
           <div class="logo-img" >
-            <img
+            <a href="#slider-section"><img
               height="50px"
               width="50px"
               src="../images/1656322137-byside.jpg"
               alt=""
-            />
+            /></a>
+            
           </div>
           <div class="search-bar">
             <input type="Search" placeholder="search" />
