--- a/pages/login.html
+++ b/pages/login.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login page</title>
-    <link rel="stylesheet" href="../styles/login.css">
-</head>
-<body>
-    <div class="login-container">
-        <form action="">
-            <fieldset>
-                <legend>Login page</legend>
-                <input type="text" placeholder="enter your name" autofocus>
-                <input type="email" placeholder="enter your email">
-                <input type="password" placeholder="enter your password">
-                <input type="submit">
-            </fieldset>
-            <button><a href="index.html">Home page</a></button>
-        </form>
+    <link rel="stylesheet" href="../styles/login.css" />
+  </head>
+  <body>
+    <div class="signup-container">
+      <form action="#">
+        <input
+          type="email"
+          id="email"
+          name="email"
+          placeholder="enter your email"
+          required
+        /><br /><br />
+        <input
+          type="password"
+          id="password"
+          name="password"
+          placeholder="enter password"
+          required
+        /><br /><br />
+
+        <input type="submit" value="Login" />
+      </form>
+      
     </div>
-</body>
+  </body>
 </html>
